--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1003,3 +1003,150 @@ form.payment
                 transition: all 0.35s
 
 
+
+
+.cart_page
+  margin-top: 75px
+  margin-bottom: 155px
+
+
+  h1
+    line-height: 1em
+    text-align: center
+    color:  #000
+    font-size: 30px
+    margin-bottom: 80px
+    font-family: "SegoeUI", sans-serif
+    font-weight: normal
+
+
+
+  form
+
+    .products
+      margin-bottom: 50px
+
+      .product-item
+        border: 1px solid #dbdbdb
+
+
+        margin-bottom: 20px
+        &:last-child
+          margin-bottom: 0
+        > div
+          display: inline-block
+          vertical-align: top
+          -webkit-box-sizing: border-box
+          -moz-box-sizing: border-box
+          box-sizing: border-box
+          border-right: 1px solid  #dbdbdb
+          height: 100px
+          &:last-child
+            border: 0
+          &.image
+              width: 160px
+              height: 100px
+              padding: 0 15px
+          &.item-name
+              padding: 25px 15px 0 15px
+              width: 285px
+
+              a
+                display: block
+                margin-bottom: 15px
+                font-size: 20px
+                color: #010101
+                line-height: 1em
+                white-space: nowrap
+                text-overflow: ellipsis
+                overflow: hidden
+                &:hover
+                  text-decoration: none
+                  color: #ffe400
+
+
+          &.attr
+            padding: 25px 0 0 15px
+            width: 160px
+            .color
+              margin-bottom: 10px
+              .attr_name
+                color: #191919
+                display: inline-block
+                vertical-align: middle
+                font-size: 20px
+                line-height: 1em
+                margin-right: 8px
+              img
+                display: inline-block
+                vertical-align: middle
+
+            .counts
+              font-size: 16px
+              line-height: 1em
+              color: #191919
+
+          &.price
+              width: 160px
+              text-align: center
+              padding-top: 40px
+              font-size: 24px
+              line-height: 1em
+              font-family: "SegoeUILight", sans-serif
+
+          &.delete
+            width: 140px
+            padding-top: 30px
+            text-align: center
+            a
+              &:hover
+                text-decoration: none
+                span
+                  color: #ffe400
+
+              span
+                display: block
+                color: #000000
+                font-size: 16px
+                line-height: 1em
+
+              img
+                margin-bottom: 10px
+
+
+
+    .control-pannel
+      width: 220px
+      float: right
+    .total_price
+      letter-spacing: 0.12px
+      color: #000000
+      font-size: 24px
+      font-family: "SegoeUILight", sans-serif
+      line-height: 1em
+      margin-bottom: 40px
+
+
+    button
+
+      padding: 8px 15px 14px
+      border: 1px solid #000000
+      background: none
+      display: block
+      font-size: 20px
+      -webkit-box-sizing: border-box
+      -moz-box-sizing: border-box
+      box-sizing: border-box
+      line-height: 1em
+      -webkit-transition: all 0.35s
+      -moz-transition: all 0.35s
+      -o-transition: all 0.35s
+      transition: all 0.35s
+      &:hover
+        background: #000000
+        color: #fff
+        -webkit-transition: all 0.35s
+        -moz-transition: all 0.35s
+        -o-transition: all 0.35s
+        transition: all 0.35s
+
