--- a/src/header.jade
+++ b/src/header.jade
@@ -35,11 +35,11 @@ header
                         li
                             a(href="/buy.html") Где купить
                         li
-                            a(href="#") О нас
+                            a(href="/about.html") О нас
                         li
                             a(href="/faq.html") FAQ
                         li
-                            a(href="#") Блог
+                            a(href="/blog.html") Блог
                         li
                             a(href="/contacts.html") Контакты
 
