--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -531,7 +531,7 @@ footer
 .pagination
   text-align: center
   margin-bottom: 150px
-  margin-top: -30px
+  clear: both
 
   li
     width: 57px
@@ -698,7 +698,7 @@ footer
 
 
 
-.article
+.article,.blog
   margin: 105px auto 85px
   h1
     line-height: 1em
@@ -726,8 +726,15 @@ footer
     font-size: 16px
     margin-bottom: 30px
     font-family: "SegoeUI", sans-serif
+    overflow: hidden
     &:last-child
       margin-bottom: 0
+  .image-left
+    float: left
+    width: 400px
+    margin-right: 50px
+    ~ .text_overflow
+      overflow: hidden
 
 
   form
@@ -1150,3 +1157,7 @@ form.payment
         -o-transition: all 0.35s
         transition: all 0.35s
 
+
+
+.blog
+  margin-bottom: 50px
