hover bug fixed

--- a/src/blog.jade
+++ b/src/blog.jade
@@ -32,7 +32,7 @@ html(lang="ru")
 
                     .pagination
                         ul
-                            li.prev
+                            li.prev.disabled
                                 a(href="#")
                             li.next
                                 a(href="#")
