--- a/src/cart.jade
+++ b/src/cart.jade
@@ -39,7 +39,7 @@ html(lang="ru")
                                     .price 499.00 UAH
                                     .delete
                                         a(href="#")
-                                            img(src="img/icons/delete.jpg")
+                                            img(src="img/icons/delete.png")
                                             span Удалить
 
 
@@ -60,7 +60,7 @@ html(lang="ru")
                                     .price 499.00 UAH
                                     .delete
                                         a(href="#")
-                                            img(src="img/icons/delete.jpg")
+                                            img(src="img/icons/delete.png")
                                             span Удалить
                             .control-pannel
                                 .total_price Всего: 898.00 UAH
