--- a/src/contacts.jade
+++ b/src/contacts.jade
@@ -23,7 +23,7 @@ html(lang="ru")
                             input(type="text", placeholder="Имя:")
                             input(type="text", placeholder="Телефон:")
                             textarea( placeholder="Сообщение:")
-                            input(type="submit", name="Отправить")
+                            button(type="submit") Отправить
                         ul.contact
                             li Skype: Symonenko.shop
                             li Телефон: +38 (093) 526 35 69
