--- a/src/payment.jade
+++ b/src/payment.jade
@@ -61,7 +61,7 @@ html(lang="ru")
                         input(type="text", placeholder="Город:")
                         input(type="text", placeholder="Улица:")
                         input(type="text", placeholder="Email:")
-                        input(type="submit", name="Отправить")
+                        button(type="submit")  Отправить
 
 
 
