--- a/src/category.jade
+++ b/src/category.jade
@@ -24,37 +24,37 @@ html(lang="ru")
 
                         .category
                             a(href="/list_products.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img2.jpg" alt="Товар 2")
                                 .category_name Кошельки
 
                         .category
                             a(href="/list_products.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img3.jpg" alt="Товар 3")
                                 .category_name Галстуки
 
                         .category
-                            a(href="#")
-                                .images
+                            a(href="/list_products.html")
+                                .images.img-holder
                                     img(src="img/content/img4.jpg" alt="Товар 4")
                                 .category_name Рубашки
 
                         .category
                             a(href="/list_products.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img5.jpg" alt="Товар 5")
                                 .category_name Штаны
 
                         .category
                             a(href="/list_products.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img2.jpg" alt="Товар 2")
                                 .category_name Рюкзаки
 
                         .category
                             a(href="/list_products.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img3.jpg" alt="Товар 3")
                                 .category_name Рюкзаки
 
