--- a/src/list_products.jade
+++ b/src/list_products.jade
@@ -23,55 +23,55 @@ html(lang="ru")
 
                         .product
                             a(href="/product.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img2.jpg" alt="Товар 2")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
                         .product
                             a(href="/product.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img3.jpg" alt="Товар 3")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
                         .product
                             a(href="/product.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img4.jpg" alt="Товар 4")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
                         .product
                             a(href="/product.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img5.jpg" alt="Товар 5")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
                         .product
                             a(href="/product.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img2.jpg" alt="Товар 2")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
                         .product
                             a(href="/product.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img3.jpg" alt="Товар 3")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
                         .product
                             a(href="/product.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img4.jpg" alt="Товар 4")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
                         .product
                             a(href="/product.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img5.jpg" alt="Товар 5")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
                         .product
                             a(href="/product.html")
-                                .images
+                                .images.img-holder
                                     img(src="img/content/img4.jpg" alt="Товар 4")
                                 .product_name Кошелек кожаный Symonen.ko
                                 .price 390,00 UAH
