--- a/src/product.jade
+++ b/src/product.jade
@@ -18,7 +18,7 @@ html(lang="ru")
                 .wrap
 
                     .productfull
-                        .image
+                        .image.img-holder
                             .big-images
                                 div
                                     img(src="img/content/img_product.jpg", alt="Кожанный кошелек")
