--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -452,6 +452,7 @@ footer
       margin: 0 8px 90px
       width: 300px
 
+
       a
         display: block
         position: relative
@@ -460,7 +461,7 @@ footer
           position: relative
           margin-bottom: 10px
           width: 100%
-          //height: 350px
+          height: 350px
           &:before
             background:  rgba(255, 228, 0, 0.71)
             position: absolute
@@ -572,7 +573,7 @@ footer
     vertical-align: top
     margin: 0 8px 20px
     width: 300px
-    //height: 350px
+    height: 350px
     overflow: hidden
 
 
@@ -583,7 +584,6 @@ footer
       .images
         position: relative
         width: 100%
-
         //height: 350px
 
 
@@ -1234,8 +1234,8 @@ form.payment
 
 
   .page_wrapper.shop .container
-    top: -327px
-    margin-bottom: -327px
+    top: -325px
+    margin-bottom: -325px
 
 
   form.payment
@@ -1244,9 +1244,17 @@ form.payment
   .categories
     .category
       width: 280px
+      height: 325px
+  .list_products
+    .product
+      width: 280px
+      margin-bottom: 50px
+      a
+        .images
+          height: 325px
 
-
-
+  .pagination
+    margin-bottom: 70px
 
 
 
