--- a/src/blog.jade
+++ b/src/blog.jade
@@ -22,10 +22,11 @@ html(lang="ru")
                         .item-page
 
                             .image-left
-                                a(href="/about.html")
-                                    img(src="../img/content/img_about.jpg")
+                                //a(href="/about.html")
+                                img(src="../img/content/img_about.jpg")
 
                             .text_overflow
+                                h3 Скоро выйдет новая коллекция одежды
                                 p.
                                     Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание новых предложений. Задача организации, в особенности же консультация с широким активом играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям. Таким образом укрепление и развитие структуры способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач. Товарищи! дальнейшее развитие различных форм деятельности играет важную роль в формировании дальнейших направлений развития. Идейные соображения высшего порядка, а также консультация с широким активом влечет за собой процесс внедрения и модернизации модели развития. С другой стороны рамки и место обучения кадров позволяет оценить значение соответствующий условий активизации.
 
