--- a/src/contacts.jade
+++ b/src/contacts.jade
@@ -8,6 +8,7 @@ html(lang="ru")
         script(src="bower_components/jquery/dist/jquery.js")
         script(src="/js/owl.carousel.js")
         script(src="/js/untils.js")
+        script(src="/js/jquery.validate.min.js")
 
 
     body
@@ -19,10 +20,13 @@ html(lang="ru")
 
                     .article
                         h1 Контакты
-                        form
-                            input(type="text", placeholder="Имя:")
-                            input(type="text", placeholder="Телефон:")
-                            textarea( placeholder="Сообщение:")
+                        form.contacts
+                            input(type="text", placeholder="Имя:", name="name", minlength="2", data-validate="name")
+                            span.error Поле обязательное для заполнения
+                            input(type="email", placeholder="E-mail:", name="email", data-validate="email")
+                            span.error Поле обязательное для заполнения
+                            textarea( placeholder="Сообщение:", name="message")
+                            span.error Поле обязательное для заполнения
                             button(type="submit") Отправить
                         ul.contact
                             li Skype: Symonenko.shop
