--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -266,6 +266,9 @@ footer
       margin-bottom: 20px
       h3
         margin-bottom: 20px
+      .error
+        input
+          border-color: #ee2115
 
       input
         background: none
@@ -275,6 +278,7 @@ footer
         box-sizing: border-box
         padding: 0 10px
         color: #FFF
+
         &::-webkit-input-placeholder, &:-moz-placeholder, &::-moz-placeholder, &:-ms-input-placeholder
               color: #fff
 
@@ -507,7 +511,7 @@ footer
         &:hover
           text-decoration: none
           .product_name
-            color: #ffe400
+            color: #e3cc0a
 
           .images
             &:before
@@ -750,8 +754,17 @@ footer
     width: 538px
     display: inline-block
     text-align: center
+    span.error
+      display: none
+      font-size: 16px
+      margin: 0 auto 20px
+      white-space: nowrap
+      text-overflow: ellipsis
+      overflow: hidden
 
-    input[type="text"]
+    label
+      display: none!important
+    input[type="text"],input[type="email"]
       border: 1px #adacac  solid
       width: 100%
       height: 48px
@@ -764,6 +777,10 @@ footer
       font-size: 18px
       font-family: "SegoeUILight", sans-serif
       margin-bottom: 20px
+      &.error
+        border: 2px solid #ee2115
+        ~ span.error
+          display: block
 
 
 
@@ -778,6 +795,12 @@ footer
       font-family: "SegoeUILight", sans-serif
       border: 1px #adacac  solid
       margin-bottom: 20px
+      &.error
+        border: 2px solid #ee2115
+        ~ span.error
+          display: block
+
+
     button[type="submit"]
         margin: auto
         padding: 9px 20px 14px
@@ -843,22 +866,57 @@ form.payment
       -moz-transition: all 0.35s
       -o-transition: all 0.35s
       transition: all 0.35s
+  .row-form
+    margin-bottom: 20px
+    > div
 
-  input[type="text"]
+      display: inline-block
+      vertical-align: top
+      span.error
+        display: none
+
+      &.error
+
+        span.error
+          display: none
+          font-size: 16px
+          margin: 10px auto
+          white-space: nowrap
+          text-overflow: ellipsis
+          overflow: hidden
+
+        input[type="text"],input[type="email"]
+          border: 2px solid #ee2115
+          ~ span.error
+            display: block
+
+      label
+        display: none!important
+      &:nth-child(2n+1)
+        margin-right: 20px
+
+  input[type="text"],input[type="email"]
       border: 1px #adacac  solid
       width: 338px
       height: 48px
-      -webkit-box-sizing: border-box
-      -moz-box-sizing: border-box
       box-sizing: border-box
       padding: 0 15px
       line-height: 48px
       color: #949292
       font-size: 18px
       font-family: "SegoeUILight", sans-serif
-      margin-bottom: 20px
-      &:nth-child(2n)
-        margin-right: 20px
+      &:focus
+        border: 2px solid #000
+
+
+
+
+
+
+
+
+
+
 
   .radio
     margin-bottom: 50px
@@ -1077,7 +1135,7 @@ form.payment
                 overflow: hidden
                 &:hover
                   text-decoration: none
-                  color: #ffe400
+                  color: #e3cc0a
 
 
           &.attr
@@ -1117,7 +1175,7 @@ form.payment
               &:hover
                 text-decoration: none
                 span
-                  color: #ffe400
+                  color: #e3cc0a
 
                 img
                   filter: none
@@ -1168,6 +1226,17 @@ form.payment
 
 .blog
   margin-bottom: 50px
+  h3
+    line-height: 1em
+    color:  #191919
+    font-size: 20px
+    margin-bottom: 25px
+    font-family: "SegoeUI-Semibold", sans-serif
+    font-weight: normal
+    margin-top: 0
+
+
+
 
 
 
