--- a/src/payment.jade
+++ b/src/payment.jade
@@ -8,6 +8,8 @@ html(lang="ru")
         script(src="bower_components/jquery/dist/jquery.js")
         script(src="/js/owl.carousel.js")
         script(src="/js/untils.js")
+        script(src="/js/bootstrap_tabs.min.js")
+        script(src="/js/alexValidate.js")
 
 
     body
@@ -45,6 +47,7 @@ html(lang="ru")
 
                         h3 Доставка
                         .radio.cf
+
                             div
                                 input(type="radio", name="delivery", value="courier", id="courier", checked="")
                                 label(for="courier") Курьером по г. Черкассы
@@ -55,12 +58,34 @@ html(lang="ru")
 
 
                         h3 Контактная информация
-                        input(type="text", placeholder="Имя:")
-                        input(type="text", placeholder="Фамилия:")
-                        input(type="text", placeholder="Страна:")
-                        input(type="text", placeholder="Город:")
-                        input(type="text", placeholder="Улица:")
-                        input(type="text", placeholder="Email:")
+                        .row-form
+                            div
+                                input(type="text", placeholder="Имя:", name="name", minlength="2", data-validate="name")
+                                span.error Поле обязательное для заполнения
+                            div
+                                input(type="text", placeholder="Фамилия:", name="surname", minlength="2", data-validate="name")
+                                span.error Поле обязательное для заполнения
+                        .row-form
+                            div
+                                input(type="text", placeholder="Страна:", name="country", data-validate="name")
+                                span.error Поле обязательное для заполнения
+                            div
+                                input(type="text", placeholder="Город:",name="city", data-validate="name")
+                                span.error Поле обязательное для заполнения
+                        .row-form
+                            div
+                                input(type="text", placeholder="Улица:", name="street", data-validate="name")
+                                span.error Поле обязательное для заполнения
+                            div
+                                input(type="text", placeholder="Дом:",name="number", data-validate="number")
+                                span.error Поле обязательное для заполнения
+                        .row-form
+                            div
+                                input(type="text", placeholder="Телефон:", name="phone", data-validate="phone")
+                                span.error Поле обязательное для заполнения
+                            div
+                                input(type="email", placeholder="Email:", name="email", data-validate="email")
+                                span.error Поле обязательное для заполнения
                         button(type="submit")  Отправить
 
 
