--- a/src/product.jade
+++ b/src/product.jade
@@ -9,7 +9,7 @@ html(lang="ru")
         script(src="bower_components/jquery/dist/jquery.js")
         script(src="/js/owl.carousel.js")
         script(src="/js/untils.js")
-        script(src="/js/jquery.validate.min.js")
+        script(src="/js/alexValidate.js")
         script(src="/js/blueimp-gallery.min.js")
 
 
