--- a/src/blog.jade
+++ b/src/blog.jade
@@ -19,11 +19,11 @@ html(lang="ru")
 
                     .blog.cf
                         h1 Блог
-                        .item-page
+                        .item-arcticle
 
                             .image-left
-                                //a(href="/about.html")
-                                img(src="../img/content/img_about.jpg")
+                                a(href="/about.html")
+                                    img(src="../img/content/img_about.jpg")
 
                             .text_overflow
                                 h3 Скоро выйдет новая коллекция одежды
