--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1238,8 +1238,30 @@ form.payment
     font-weight: normal
     margin-top: 0
 
+  .item-arcticle
+    margin-bottom: 80px
 
 
+#blueimp-gallery
+  .prev,.next
+    width: 20px
+    height: 34px
+    background: url("../img/icons/array.png") no-repeat
+    background-size: 100%
+    &:hover
+      background-position: bottom left
+
+  .next
+    transform: rotate(180deg)
+
+  .close
+    width: 23px
+    height: 23px
+    background: url("../img/icons/close.png") no-repeat
+    background-size: 100%
+    margin: 0
+    &:hover
+        background-position: bottom left
 
 
 
