--- a/src/product.jade
+++ b/src/product.jade
@@ -93,9 +93,9 @@ html(lang="ru")
 
         #blueimp-gallery.blueimp-gallery
             .slides
-            h3.title
-            a.prev ‹
-            a.next ›
-            a.close ×
-            a.play-pause
-            ol.indicator
+            //h3.title
+            a.prev
+            a.next
+            a.close
+            //a.play-pause
+            //ol.indicator
